# facul-fastapi2

./: alembic.ini  banco.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22e806276789_test.py
db/: connection.py  model.py
routes/: deps.py  user_route.py
schema/: user_schema.py
use_cases/: user_use_case.py
